--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "scripts": {
     "start": "nodemon src/server/run.js",
-    "build dev": "cross-env NODE_ENV=development webpack",
-    "build prod": "cross-env NODE_ENV=production webpack",
+    "build dev": "eslint . && cross-env NODE_ENV=development webpack",
+    "build prod": "eslint . && cross-env NODE_ENV=production webpack",
     "dev": "webpack-dev-server",
-    "lint": "eslint -c .eslintrc.js .",
+    "lint": "eslint .",
     "test": "jest"
   },
   "repository": {
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -29,12 +30,15 @@
     "@babel/register": "^7.9.0",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
+    "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^25.5.4",
     "nodemon": "^2.0.3",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
