--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "git+https://github.com/igoryushchenko/react-cdp.git"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
