--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
