--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "html-webpack-plugin": "^4.3.0",
     "jest": "^25.5.4",
     "nodemon": "^2.0.3",
+    "redux-mock-store": "^1.5.4",
+    "sinon": "^9.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
