--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "cypress": "cypress open",
-    "flow": "flow"
+    "flow": "flow",
+    "storybook": "start-storybook -p 6006"
   },
   "repository": {
     "type": "git",
@@ -31,7 +32,8 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
-    "@babel/register": "^7.9.0"
+    "@babel/register": "^7.9.0",
+    "@storybook/react": "^5.3.19"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.4",
