--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "url": "git+https://github.com/igoryushchenko/react-cdp.git"
   },
   "dependencies": {
+    "@babel/register": "^7.9.0",
+    "@storybook/react": "^5.3.19",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "prop-types": "^15.7.2",
@@ -32,8 +34,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
-    "@babel/register": "^7.9.0",
-    "@storybook/react": "^5.3.19"
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.4",
