--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@storybook/react": "^5.3.19",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
+    "immutable": "^4.0.0-rc.12",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
